--- a/docs/locale/es/LC_MESSAGES/schema.po
+++ b/docs/locale/es/LC_MESSAGES/schema.po
@@ -7,6 +7,7 @@
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-09-06 12:21+0000\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -372,8 +373,8 @@ msgid ""
 "vocabularies) definitions."
 msgstr ""
 "Nombre por el que se conoce a este individuo. Los nombres deberían indicarse"
-" en nombreCompleto y pueden desglosarse facultativamente en los campos "
-"familyName (Apellido), givenName (nombreDePila) y patronymicName "
+" en fullName (nombreCompleto) y pueden desglosarse facultativamente en los "
+"campos familyName (Apellido), givenName (nombreDePila) y patronymicName "
 "(nombrePatronímico), según las definiciones de [EC ISA Core Person "
 "Vocabulary](https://joinup.ec.europa.eu/solution/e-government-core-"
 "vocabularies)."
@@ -619,9 +620,9 @@ msgid ""
 "maximum value given. E.g. if maximum is 50, the share is less than 49.999, "
 "and not simply 50."
 msgstr ""
-"Si exclusiveMaximum es verdadero, entonces la porción es al menos menor que "
-"el valor máximo dado. Por ejemplo, si el máximo es 50, la porción es "
-"inferior a 49,999 y no simplemente 50."
+"Si exclusiveMaximum (máximoExcluyente) es verdadero, entonces la porción es "
+"al menos menor que el valor máximo dado. Por ejemplo, si el máximo es 50, la"
+" porción es inferior a 49,999 y no simplemente 50."
 
 #. /definitions/Interest/properties/startDate/title
 #. /definitions/PepStatusDetails/properties/startDate/title
@@ -1294,19 +1295,20 @@ msgid ""
 " Statement is the primary declaration of the relationship between the "
 "`subject` and the `interestedParty`."
 msgstr ""
-"¿Esta Declaración sobre Titularidad o Control representa un componente de "
-"una relación de titularidad o control indirecta más amplia? Cuando "
-"`isComponent` es \"true\": (1) la `statementID` de esta Declaración sobre "
-"Titularidad o Control secundaria DEBE ser un elemento en el arreglo  "
-"`componentStatementIDs` de esa Declaración sobre Titularidad o Control "
-"primaria, (2) esta Declaración sobre Titularidad o Control DEBE preceder a "
-"la Declaración sobre Titularidad o Control primaria en un paquete o flujo "
-"del BODS, (3) se  DEBERÍA contemplar el reemplazo de esta Declaración sobe "
-"Titularidad o Control cuando se reemplace la Declaración sobre Titularidad o"
-" Control primaria, y (4) el valor de `esComponente` en la Declaración sobre "
-"Titularidad o Control primaria DEBE ser \"false\". Cuando `isComponent` es "
-"\"false\", esta Declaración sobre Titularidad o Control es la declaración "
-"primaria de la relación entre el `subject` y la `interestedParty`."
+"¿Esta Declaración sobre Titularidad o Control (ownershipOrControlStatement) "
+"representa un componente de una relación de titularidad o control indirecta "
+"más amplia? Cuando `isComponent` es \"true\": (1) la `statementID` de esta "
+"Declaración sobre Titularidad o Control secundaria DEBE ser un elemento en "
+"el arreglo  `componentStatementIDs` de esa Declaración sobre Titularidad o "
+"Control primaria, (2) esta Declaración sobre Titularidad o Control DEBE "
+"preceder a la Declaración sobre Titularidad o Control primaria en un paquete"
+" o flujo del BODS, (3) se  DEBERÍA contemplar el reemplazo de esta "
+"Declaración sobe Titularidad o Control cuando se reemplace la Declaración "
+"sobre Titularidad o Control primaria, y (4) el valor de `isComponent` en la "
+"Declaración sobre Titularidad o Control primaria DEBE ser \"false\". Cuando "
+"`isComponent` es \"false\", esta Declaración sobre Titularidad o Control es "
+"la declaración primaria de la relación entre el `subject` y la "
+"`interestedParty`."
 
 #. /properties/componentStatementIDs/title
 #: schema/ownership-or-control-statement.json:1
