--- a/docs/locale/es/LC_MESSAGES/index.po
+++ b/docs/locale/es/LC_MESSAGES/index.po
@@ -6,6 +6,7 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +51,8 @@ msgid ""
 "Get an overview of beneficial ownership and why a standardised format for "
 "data is important."
 msgstr ""
-"Obtenga una noción general de los beneficiarios finales y sepa por qué es "
-"importante contar con un formato estandarizado de datos."
+"Obtenga una noción general del concepto de los beneficiarios finales y sepa "
+"por qué es importante contar con un formato estandarizado de datos."
 
 # 9712a7559b4c435b98d173c8bcf97a79
 #: ../../index.rst:18
@@ -61,7 +62,7 @@ msgstr ":doc:`Consulte la guía introductoria <primer/index>`"
 # e93ac76495ea4fffa45031852ffde9b9
 #: ../../index.rst:22
 msgid ":doc:`What is beneficial ownership? <primer/whatisbo>`"
-msgstr ":doc:`¿Qué significa beneficiario final? <primer/whatisbo>`"
+msgstr ":doc:`¿Qué son los beneficiarios finales? <primer/whatisbo>`"
 
 # bb0c3763ad8540459c70f8007de35a0a
 #: ../../index.rst:26
