--- a/docs/locale/es/LC_MESSAGES/primer/whatisbo.po
+++ b/docs/locale/es/LC_MESSAGES/primer/whatisbo.po
@@ -6,6 +6,8 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +27,7 @@ msgstr ""
 # a9ac0381edd146539b5dcd727dd86857
 #: ../../primer/whatisbo.rst:4
 msgid "What is beneficial ownership?"
-msgstr "¿Qué significa beneficiario final?"
+msgstr "¿Qué son los beneficiarios finales?"
 
 # 2ca95407630745b89dc346114f2434c9
 #: ../../primer/whatisbo.rst:6
@@ -134,6 +136,6 @@ msgid ""
 "income or assets (ownership) or the right to direct or influence the "
 "entity's activities (control)."
 msgstr ""
-"**Beneficiario final** es aquel que tiene derecho a una parte de los "
-"ingresos o bienes de una entidad jurídica (titularidad) o el derecho de "
-"dirigir o influenciar las actividades de una entidad (control)."
+"Los **beneficiarios finales** son aquellos que tienen derecho a una parte de"
+" los ingresos o bienes de una entidad jurídica (titularidad) o el derecho de"
+" dirigir o influenciar las actividades de una entidad (control)."
