--- a/docs/locale/es/LC_MESSAGES/schema/concepts.po
+++ b/docs/locale/es/LC_MESSAGES/schema/concepts.po
@@ -7,6 +7,7 @@
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,8 +64,9 @@ msgid ""
 "describing:"
 msgstr ""
 "El concepto de \"declaración\" conforma el núcleo del Estándar de Datos "
-"sobre Beneficiarios Finales. Los datos basados en BODS consisten en un "
-"conjunto de declaraciones ordenadas que describen lo siguiente:"
+"sobre Beneficiarios Finales (BODS, por sus siglas en inglés). Los datos "
+"basados en BODS consisten en un conjunto de declaraciones ordenadas que "
+"describen lo siguiente:"
 
 # 6af55ab0c5fa4ba8aed4761f2d3778d8
 #: ../../schema/concepts.rst:15
