--- a/docs/locale/es/LC_MESSAGES/schema/guidance/languages.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/languages.po
@@ -5,7 +5,7 @@
 # 
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
-# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,15 +42,15 @@ msgid ""
 "For people's names, use an entry in the ``names`` array with a ``type`` of "
 "'translation'"
 msgstr ""
-"Para los nombres de personas, utilice una entrada en el arreglo ``nombres`` "
-"con un ``tipo`` consistente en \"traducción\""
+"Para los nombres de personas, utilice una entrada en el arreglo ``names`` "
+"con un ``type`` consistente en \"translation\""
 
 # 5ba287331d454476af90646837228017
 #: ../../schema/guidance/languages.rst:7
 msgid "For entity names, use an entry in the ``alternativeNames`` array"
 msgstr ""
 "Para los nombres de entidades, utilice una entrada en el arreglo "
-"``nombresAlternativos``"
+"``alternativeNames``"
 
 # 4ed0b51ab480434eaac16a9b6a918630
 #: ../../schema/guidance/languages.rst:9
@@ -58,5 +58,5 @@ msgid ""
 "For other fields, an ``annotations`` object can be used to indicate that a "
 "particular field has a translation or transliteration."
 msgstr ""
-"Para otros campos, se puede utilizar un objeto ``notas`` para indicar que un"
-" determinado campo cuenta con una traducción o transliteración."
+"Para otros campos, se puede utilizar un objeto ``annotations`` para indicar "
+"que un determinado campo cuenta con una traducción o transliteración."
