--- a/docs/locale/es/LC_MESSAGES/schema/guidance/provenance.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/provenance.po
@@ -6,6 +6,7 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -58,7 +59,7 @@ msgid ""
 "The ``source`` property of each statement MAY be used to provide provenance "
 "information."
 msgstr ""
-"La propiedad ``fuente`` de cada declaración PUEDE utilizarse para brindar "
+"La propiedad ``source`` de cada declaración PUEDE utilizarse para brindar "
 "información sobre su procedencia."
 
 # 02a776d2d7c949219712775f4f65b0ec
@@ -74,14 +75,14 @@ msgid ""
 "these changes SHOULD be recorded as annotations, to allow users to clearly "
 "understand the provenance of information."
 msgstr ""
-"La propiedad ``nota`` de cada declaración PUEDE utilizarse para brindar "
-"información contextual adicional a nivel de una declaración completa, un "
-"subobjeto o una propiedad individual. Por ejemplo, podría utilizarse una "
-"nota para incluir información estructurada que detalle la naturaleza de la "
-"participación que una persona física tiene en una empresa. En algunos casos,"
-" los sistemas que procesan datos basados en BODS pueden realizar cambios "
-"para limpiar, mejorar o actualizar de algún otro modo los datos, p. ej. "
-"conciliar los nombres de las empresas con los identificadores. En este caso,"
-" los detalles de dichos cambios DEBERÍAN registrarse como notas, a fin de "
-"posibilitar que los usuarios comprendan claramente la procedencia de la "
-"información."
+"La propiedad ``annotations`` de cada declaración PUEDE utilizarse para "
+"brindar información contextual adicional a nivel de una declaración "
+"completa, un subobjeto o una propiedad individual. Por ejemplo, podría "
+"utilizarse una nota para incluir información estructurada que detalle la "
+"naturaleza de la participación que una persona física tiene en una empresa. "
+"En algunos casos, los sistemas que procesan datos basados en BODS pueden "
+"realizar cambios para limpiar, mejorar o actualizar de algún otro modo los "
+"datos, p. ej. conciliar los nombres de las empresas con los identificadores."
+" En este caso, los detalles de dichos cambios DEBERÍAN registrarse como "
+"notas, a fin de posibilitar que los usuarios comprendan claramente la "
+"procedencia de la información."
