--- a/docs/locale/es/LC_MESSAGES/schema/guidance/serialization.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/serialization.po
@@ -6,6 +6,7 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,11 +51,11 @@ msgid ""
 "  MUST appear before that particular ownership-or-control statement in the "
 "ordered array."
 msgstr ""
-"Cada una de las :ref:`declaracionesSobreEntidades <schema-entity-statement>`"
-" o :ref:`declaracionesSobrePersonas <schema-person-statement>` a las que se "
-"hace referencia en una determinada :ref:`declaraciónSobreTitularidadOControl"
-" <schema-ownership-or-control-statement>` DEBE aparecer antes de esa "
-"declaración sobre titularidad o control en el arreglo ordenado."
+"Cada una de las :ref:`entityStatements <schema-entity-statement>` o "
+":ref:`personStatements <schema-person-statement>` a las que se hace "
+"referencia en una determinada :ref:`ownershipOrControlStatement <schema-"
+"ownership-or-control-statement>` DEBE aparecer antes de esa declaración "
+"sobre titularidad o control en el arreglo ordenado."
 
 # b6ad419a547047b0958af11729ea03f8
 #: ../../schema/guidance/serialization.rst:10
@@ -82,22 +83,22 @@ msgstr "puede serializarse en una tabla como:"
 # e4e5d853b2784e5bb1ca1b5cb991f485
 #: ../../schema/guidance/serialization.rst:48
 msgid "statementID"
-msgstr "identificaciónDeDeclaración"
+msgstr "statementID"
 
 # b95ed1ca270e426e8c7d8d11983bff6b
 #: ../../schema/guidance/serialization.rst:49
 msgid "statementType"
-msgstr "tipoDeDeclaración"
+msgstr "statementType"
 
 # 175ee0b3c318488bb53a95b86269367b
 #: ../../schema/guidance/serialization.rst:50
 msgid "identifiers/0/scheme"
-msgstr "identificadores/0/esquema"
+msgstr "identifiers/0/scheme"
 
 # 8b85ff9004ea4f9791f878ebba7f40b4
 #: ../../schema/guidance/serialization.rst:51
 msgid "identifiers/0/id"
-msgstr "identificadores/0/identificación"
+msgstr "identifiers/0/id"
 
 # 824e3340cac445d3bb505f315f44bb0e
 #: ../../schema/guidance/serialization.rst:52
@@ -107,7 +108,7 @@ msgstr "e3c07f34-1810-4eed-b845-4d9f4d97f9d5"
 # b71d72fc25f5403fa544a897026be01a
 #: ../../schema/guidance/serialization.rst:53
 msgid "entityStatement"
-msgstr "declaraciónSobreEntidad"
+msgstr "entityStatement"
 
 # 1716ad5501354a2d988f53c571c2a059
 #: ../../schema/guidance/serialization.rst:54
@@ -127,7 +128,7 @@ msgstr "a2b485be-e3b6-4fd7-8a6a-930e46cf9957"
 # 28105673ddfd437582887fe883a843fb
 #: ../../schema/guidance/serialization.rst:57
 msgid "personStatement"
-msgstr "declaraciónSobrePersona"
+msgstr "personStatement"
 
 # b2911098e42344bfb37be38452affb8b
 #: ../../schema/guidance/serialization.rst:58
@@ -147,4 +148,4 @@ msgstr "34b479f2-1681-4064-ab51-1e703fbafa"
 # 48b972c92e6d48bfbed555c8bd34560d
 #: ../../schema/guidance/serialization.rst:62
 msgid "ownershipOrControlStatement"
-msgstr "declaraciónSobreTitularidadOControl"
+msgstr "ownershipOrControlStatement"
