--- a/docs/locale/es/LC_MESSAGES/usecases.po
+++ b/docs/locale/es/LC_MESSAGES/usecases.po
@@ -6,6 +6,7 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -559,7 +560,7 @@ msgstr ""
 " persigue, también hay investigaciones basadas en datos, que funcionan "
 "analizando o explorando los datos en su conjunto, o combinando los datos con"
 " otros conjuntos de datos. Ejemplos de ello serían el mapeo de los datos "
-"sobre beneficiarios finales con los datos sobre contrataciones (para relevar"
+"sobre beneficiarios finales con los datos sobre contrataciones (para revelar"
 " conflictos de intereses), así como el mapeo con otros datos similares, como"
 " los datos sobre los accionistas de los registros de las empresas."
 
