--- a/docs/locale/es/LC_MESSAGES/userguides/updating-data.po
+++ b/docs/locale/es/LC_MESSAGES/userguides/updating-data.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# Peter Low <peter@openownership.org>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
+"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,4 +34,4 @@ msgid ""
 "republishing data. replacesStatement etc.)"
 msgstr ""
 "(Nueva sección. Información sobre las mejores prácticas para actualizar, "
-"corregir, \"borrar\" y republicar datos. reemplazaDeclaración, etc.)"
+"corregir, \"borrar\" y republicar datos. replacesStatement, etc.)"
